# oresat-cand

./: .clang-format  .gitignore  .gitmodules  README.md  format_code.sh  makedeb.sh  meson.build  od.yaml  oresat-cand.service  oresat-canopend.service  project.yml  requirements.txt
.github/workflows/: test.yaml
debian/: control  oresat-cand.install  oresat-cand.postinst  oresat-cand.postrm  oresat-cand.prerm  oresat-canopend-dev.install  oresat-canopend.install  oresat-canopend.postinst  oresat-canopend.prerm  rules
libcanopend-py/: README.md  gen.py  pyproject.toml
libcanopend-py/oresat_libcanopend/: __init__.py  __main__.py  client.py  ecss.py  entry.py  message.py  msg.py  node_client.py
libraries/python/: .gitignore  README.md  pyproject.toml
libraries/python/oresat_cand/: _version.py  entry.py
libraries/python/oresat_canopend/: _version.py  message.py
libraries/python/tests/: test_entry.py
libs/python/: README.md  pyproject.toml
libs/python/oresat_cand/: __init__.py  entry.py  errors.py  message.py  node_client.py
libs/python/tests/: test_entry.py  test_message.py
scripts/: fcache_list_main.c  fread_main.c  fwrite_main.c  meson.build  os_command_main.c  parse_int.h  sdo_read_main.c  sdo_write_main.c
scripts/sdo_client/: basic_node.c  basic_node.h  meson.build  sdo_client.c  sdo_client.h
scripts/sdo_client_node/: meson.build  sdo_client_node.c  sdo_client_node.h
src/: conf_load.c  conf_load.h  dcf_od.c  dcf_od.h  ipc.c  ipc.h  load_configs.c  load_configs.h  main.c  meson.build
src/canopenlinux/: CO_driver_custom.h  OD.c  OD.h  config.c  config.h  dcf_od.c  log_prinf.c  log_prinf.h  meson.build  sdo_client.c  sdo_client.h
src/common/: ecss_time.c  ecss_time.h  fcache.c  fcache.h  logger.c  logger.h  meson.build  str2buf.c  str2buf.h  system.c  system.h
src/ipc/: ipc.c  ipc.h  ipc_broadcast.c  ipc_broadcast.h  ipc_broadcaster.c  ipc_broadcaster.h  ipc_can_event.c  ipc_can_event.h  ipc_consume.c  ipc_consume.h  ipc_consumer.c  ipc_consumer.h  ipc_msg.h  ipc_respond.c  ipc_respond.h  ipc_responder.c  ipc_responder.h  meson.build
src/od_extensions/: ecss_time_ext.c  ecss_time_ext.h  file_transfer_ext.c  file_transfer_ext.h  meson.build  od_ext.c  od_ext.h  os_command_ext.c  os_command_ext.h  system_ext.c  system_ext.h
tests/common/: meson.build  test_str2buf.c
